--- a/index.html
+++ b/index.html
@@ -677,8 +677,7 @@
                 type="checkbox"
                 name="conditions-checkbox"
                 id="conditions-checkbox"
-              /><span class="check-icon"></span>Соглашаюсь с рассылкой и
-              принимаю
+              /><span class="icon"></span>Соглашаюсь с рассылкой и принимаю
             </label>
             <a href="" class="link">Условия договора</a>
           </div>
