--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
         </div>
       </div>
     </footer>
-    <div data-modal class="backdrop">
+    <div data-modal class="backdrop is-hidden">
       <div class="modal">
         <button data-modal-close class="modal-button">
           <svg class="icon" width="11" height="11">
@@ -670,20 +670,13 @@
               id="conditions"
             ></textarea>
           </div>
-          <div class="checkbox-wrap">
-            <label>
-              <input
-                class="conditions-checkbox"
-                type="checkbox"
-                name="conditions-checkbox"
-                id="conditions-checkbox"
-              /><span class="icon"></span>Соглашаюсь с рассылкой и принимаю
-            </label>
-            <a href="" class="link">Условия договора</a>
-          </div>
-
-          <!-- <button class="footer-button" type="submit">Подписаться</button> -->
         </form>
+        <label class="checkbox-label">
+          <input class="checkbox-input" type="checkbox" neme="checkbox" />
+          <span class="checkbox-icon"></span>Соглашаюсь с рассылкой и принимаю
+          <a class="checkbox-link" href="">Условия договора</a>
+        </label>
+        <button class="form-submit" type="submit">Отправить</button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
