--- a/portfolio.html
+++ b/portfolio.html
@@ -402,6 +402,7 @@
               type="email"
               name="user-mail"
               placeholder="E-mail"
+              required
             />
             <button class="footer-button" type="submit">
               Подписаться
