--- a/index.html
+++ b/index.html
@@ -595,6 +595,7 @@
               type="email"
               name="user-mail"
               placeholder="E-mail"
+              required
             />
             <button class="footer-button" type="submit">
               Подписаться
@@ -624,6 +625,7 @@
               name="user-name"
               placeholder=" "
               id="user-name"
+              required
             />
             <svg class="icon" width="18" height="18">
               <use href="./images/icons/sprite.svg#icon-person-black-18"></use>
@@ -639,6 +641,8 @@
               name="user-phone"
               placeholder=" "
               id="user-phone"
+              required
+              pattern="^[ 0-9]+$"
             />
             <svg class="icon" width="18" height="18">
               <use href="./images/icons/sprite.svg#icon-phone-black-18"></use>
@@ -670,13 +674,14 @@
               id="conditions"
             ></textarea>
           </div>
+
+          <label class="checkbox-label">
+            <input class="checkbox-input" type="checkbox" neme="checkbox" />
+            <span class="checkbox-icon"></span>Соглашаюсь с рассылкой и принимаю
+            <a class="checkbox-link" href="">Условия договора</a>
+          </label>
+          <button type="submit" class="form-submit">Отправить</button>
         </form>
-        <label class="checkbox-label">
-          <input class="checkbox-input" type="checkbox" neme="checkbox" />
-          <span class="checkbox-icon"></span>Соглашаюсь с рассылкой и принимаю
-          <a class="checkbox-link" href="">Условия договора</a>
-        </label>
-        <button class="form-submit" type="submit">Отправить</button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
